--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 <span class="subheading">Hey! I am</span>
 <h1>Shokhjahon</h1>
 <h2>I'm a
-<span class="txt-rotate" data-period="800" data-rotate='["Coder.", "Full-stack Developer.", "Mobilographer.", "Designer & Videomaker" ]'></span>
+<span class="txt-rotate" data-period="800" data-rotate='["Coder.", "Backend Developer.", "Python Developer", "Videomaker."]'></span>
 </h2>
 </div>
 </div>
@@ -81,7 +81,7 @@
 <p>Backend developer from Samarkand</p>
 <ul class="about-info mt-4 px-md-0 px-2">
 <li class="d-flex"><span>Name:</span> <span>Shokhjahon Abdukhalimov</span></li>
- <li class="d-flex"><span>Age:</span> <span>13.5</span></li>
+ <li class="d-flex"><span>Age:</span> <span>14</span></li>
 <li class="d-flex"><span>Date of birth:</span> <span>30.12.2009</span></li>
 <li class="d-flex"><span>Address:</span> <span>Marv street, 10</span></li>
 <!--<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>-->
