--- a/templates/index.html
+++ b/templates/index.html
@@ -459,7 +459,7 @@
 <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url({% static 'images/web.png' %});">
 <div class="overlay"></div>
 <div class="text text-center p-4">
-<h3><a href="https://shokhjahon.uz">Shokhjahon</a></h3>
+<h3><a href="https://shokhjahon-dev.github.io">Shokhjahon</a></h3>
 <span>simple website</span>
 </div>
 </div>
